fixed gallery on mobile

--- a/style.css
+++ b/style.css
@@ -36,13 +36,13 @@ a{
 .mItem:hover{
     background-color: #242424;
     border-radius: 10px;
-    opacity: 100%;
+    /* opacity: 100%; */
 }
 
 .mBar {
   display: flex;
   align-items: center;
-  justify-content: center; /* Keep menu items centered */
+  justify-content: center;
   padding: 10px;
   background-color: #181818;
   position: fixed;
@@ -166,25 +166,38 @@ strong{
 
   .grid-container {
     display: grid;
-    grid-template-columns: repeat(2, 700px);
+    grid-template-columns: repeat(2, 700px); 
     grid-gap: 20px;
-    justify-content:center; 
-  }
-  .grid-box {
-    width: 700px;
-    height: 350px;
-    background-color:  #302f2f;
+    justify-content: center; 
+}
+
+/*Make it a single column on smaller screens */
+@media (max-width: 800px) { 
+    .grid-container {
+        grid-template-columns: 1fr; 
+    }
+    
+    .grid-box {
+        width: 100%; 
+        max-width: 90%; 
+        margin: auto;
+    }
+}
+
+.grid-box {
+    background-color: #302f2f;
     border: 1px solid #ccc;
     border-radius: 10px;
     overflow: hidden;
     position: relative;
-  }
+}
 
-  .grid-box img {
+.grid-box img {
     width: 100%;
-    height: 100%;
+    height: auto;
     object-fit: cover; 
-  }
+}
+
 
   .cal-button {
     background-color:  #3ba55c;
@@ -223,7 +236,6 @@ p{
   font-weight: bold;
   cursor: pointer;
   padding: 10px;
-  /* background-color: #444; */
   border-radius: 5px;
   margin-bottom: 2px;
 }
@@ -232,7 +244,6 @@ p{
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.5s ease-in-out, padding 0.5s ease-in-out;
-  /* background-color: #555; */
   padding: 0 10px;
   border-radius: 5px;
 }
@@ -242,7 +253,7 @@ p{
 }
 
 .open {
-  max-height: 200px; /* Adjust as needed */
+  max-height: 200px;
   padding: 10px;
 }
 
